changed interactive notebook

--- a/code/interactive.ipynb
+++ b/code/interactive.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define hosts for which model should be built\n",
-    "hosts = [\"A\", \"B\"]"
+    "hosts = [\"hosttaxID1\", \"hosttaxID2\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,38 +26,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load datasets\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import ast\n",
     "\n",
     "# read in file\n",
-    "featureFilePath = \"mock_features.csv\"\n",
+    "featureFilePath = \"mock_features_preprocessing.csv\"\n",
+    "featureData = pd.read_csv(featureFilePath)\n",
     "\n",
+    "\n",
+    "# Convert the flat feature list into right format for classifier\n",
+    "featureData['FeaturesFlat'] = featureData['FeaturesFlat'].apply(ast.literal_eval)\n",
+    "featureData['FeaturesFlat'] = featureData['FeaturesFlat'].apply(lambda x: [float(i) for i in x])\n",
+    "\n",
+    "\n",
+    "# Create dictionary of hostIDs and empty lists (of feature lists for each datapoint) for each host\n",
     "featuresPerHost = {}\n",
     "for host in hosts:\n",
     "    featuresPerHost[host] = []\n",
     "\n",
-    "# read line by line\n",
-    "with open(featureFilePath, \"r\") as file:\n",
-    "    for line in file:\n",
-    "        # split line\n",
-    "        parts = line.split(\",\")\n",
-    "        host = parts[0]\n",
-    "        virus = parts[1]\n",
-    "        features = parts[2:]\n",
-    "        features = [float(feature) for feature in features]\n",
-    "        featuresPerHost[host].append(features)\n",
+    "\n",
+    "# Extract features of virus sequences for each host in seperate list and convert them to a np array\n",
+    "for _, row in featureData.iterrows():\n",
+    "    host = row['HostTaxID']\n",
+    "    features = np.array(row['FeaturesFlat'])\n",
+    "    featuresPerHost[host].append(features)\n",
     "\n",
     "for host in hosts:\n",
-    "    featuresPerHost[host] = np.array(featuresPerHost[host])"
+    "    featuresPerHost[host] = np.array(featuresPerHost[host])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,9 +80,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:409: UserWarning: A single label was found in 'y_true' and 'y_pred'. For the confusion matrix to have the correct shape, use the 'labels' parameter to pass all known labels.\n",
+      "  warnings.warn(\n",
+      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:2480: UserWarning: y_pred contains classes not in y_true\n",
+      "  warnings.warn(\"y_pred contains classes not in y_true\")\n",
+      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 due to no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:409: UserWarning: A single label was found in 'y_true' and 'y_pred'. For the confusion matrix to have the correct shape, use the 'labels' parameter to pass all known labels.\n",
+      "  warnings.warn(\n",
+      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py:540: FitFailedWarning: \n",
+      "2 fits failed out of a total of 5.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "1 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/Users/al/Desktop/Bioinformatik/1.Semester/Sequence Bioinformatics/Virushunter/Virushunter/code/classification/ElkanotoSVCClassifier.py\", line 35, in fit\n",
+      "    self.model.fit(X, y)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/pulearn/elkanoto.py\", line 73, in fit\n",
+      "    self.estimator.fit(X, y)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py\", line 1473, in wrapper\n",
+      "    return fit_method(estimator, *args, **kwargs)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 199, in fit\n",
+      "    y = self._validate_targets(y)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 742, in _validate_targets\n",
+      "    raise ValueError(\n",
+      "ValueError: The number of classes has to be greater than one; got 1 class\n",
+      "\n",
+      "--------------------------------------------------------------------------------\n",
+      "1 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/Users/al/Desktop/Bioinformatik/1.Semester/Sequence Bioinformatics/Virushunter/Virushunter/code/classification/ElkanotoSVCClassifier.py\", line 35, in fit\n",
+      "    self.model.fit(X, y)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/pulearn/elkanoto.py\", line 76, in fit\n",
+      "    hold_out_predictions = self.estimator.predict_proba(X_p_hold_out)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 856, in predict_proba\n",
+      "    X = self._validate_for_predict(X)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 606, in _validate_for_predict\n",
+      "    X = self._validate_data(\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py\", line 633, in _validate_data\n",
+      "    out = check_array(X, input_name=\"X\", **check_params)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py\", line 1087, in check_array\n",
+      "    raise ValueError(\n",
+      "ValueError: Found array with 0 sample(s) (shape=(0, 1615)) while a minimum of 1 is required by SVC.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
+      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:2480: UserWarning: y_pred contains classes not in y_true\n",
+      "  warnings.warn(\"y_pred contains classes not in y_true\")\n",
+      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 due to no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py:540: FitFailedWarning: \n",
+      "4 fits failed out of a total of 5.\n",
+      "The score on these train-test partitions for these parameters will be set to nan.\n",
+      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
+      "\n",
+      "Below are more details about the failures:\n",
+      "--------------------------------------------------------------------------------\n",
+      "4 fits failed with the following error:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
+      "    estimator.fit(X_train, y_train, **fit_params)\n",
+      "  File \"/Users/al/Desktop/Bioinformatik/1.Semester/Sequence Bioinformatics/Virushunter/Virushunter/code/classification/ElkanotoSVCClassifier.py\", line 35, in fit\n",
+      "    self.model.fit(X, y)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/pulearn/elkanoto.py\", line 76, in fit\n",
+      "    hold_out_predictions = self.estimator.predict_proba(X_p_hold_out)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 856, in predict_proba\n",
+      "    X = self._validate_for_predict(X)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 606, in _validate_for_predict\n",
+      "    X = self._validate_data(\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py\", line 633, in _validate_data\n",
+      "    out = check_array(X, input_name=\"X\", **check_params)\n",
+      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py\", line 1087, in check_array\n",
+      "    raise ValueError(\n",
+      "ValueError: Found array with 0 sample(s) (shape=(0, 1615)) while a minimum of 1 is required by SVC.\n",
+      "\n",
+      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# run k-fold cross validation for each host\n",
     "from sklearn.model_selection import KFold, cross_validate\n",
@@ -95,25 +189,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'A': {'fit_time': array([0.00281906, 0.0013957 , 0.00198793, 0.00200129, 0.00100255]),\n",
-       "  'score_time': array([0.00508285, 0.0051415 , 0.00584149, 0.00300026, 0.00403333]),\n",
-       "  'test_balanced_accuracy': array([1., 1., 1., 1., 1.]),\n",
-       "  'test_recall': array([1., 1., 1., 1., 1.]),\n",
-       "  'test_precision': array([1., 1., 1., 1., 1.])},\n",
-       " 'B': {'fit_time': array([0.00099826, 0.00202584, 0.00099373, 0.00101185, 0.00200987]),\n",
-       "  'score_time': array([0.00545621, 0.00300026, 0.00445247, 0.00414681, 0.00300479]),\n",
-       "  'test_balanced_accuracy': array([1., 1., 1., 1., 1.]),\n",
-       "  'test_recall': array([1., 1., 1., 1., 1.]),\n",
-       "  'test_precision': array([1., 1., 1., 1., 1.])}}"
+       "{'hosttaxID1': {'fit_time': array([0.00468397, 0.00295091, 0.00166297, 0.00072789, 0.00107598]),\n",
+       "  'score_time': array([0.00875211, 0.00752616, 0.00493312, 0.        , 0.        ]),\n",
+       "  'test_balanced_accuracy': array([ 1.,  0.,  1., nan, nan]),\n",
+       "  'test_recall': array([ 1.,  0.,  1., nan, nan]),\n",
+       "  'test_precision': array([ 1.,  0.,  1., nan, nan])},\n",
+       " 'hosttaxID2': {'fit_time': array([0.00170922, 0.00112796, 0.0010488 , 0.0011251 , 0.0008769 ]),\n",
+       "  'score_time': array([0.        , 0.        , 0.00421023, 0.        , 0.        ]),\n",
+       "  'test_balanced_accuracy': array([nan, nan,  0., nan, nan]),\n",
+       "  'test_recall': array([nan, nan,  0., nan, nan]),\n",
+       "  'test_precision': array([nan, nan,  0., nan, nan])}}"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
