Initial pipeline working
Co-authored-by: fbarlow <frankiebar1@users.noreply.github.com>

--- a/code/interactive.ipynb
+++ b/code/interactive.ipynb
@@ -2,23 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define hosts for which model should be built\n",
-    "hosts = [\"hosttaxID1\", \"hosttaxID2\"]"
+    "# Necessary Imports\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import ast\n",
+    "from classification.ElkanotoSVCClassifier import ElkanotoSVCClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define hosts for which model should be built\n",
+    "hosts = [\"hosttaxID1\", \"hosttaxID2\", \"hosttaxID3\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create a untrained classifier for each host\n",
-    "from classification.ElkanotoSVCClassifier import ElkanotoSVCClassifier\n",
-    "\n",
     "classifiers = {}\n",
     "for host in hosts:\n",
     "    classifiers[host] = ElkanotoSVCClassifier()"
@@ -26,14 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load datasets\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import ast\n",
     "\n",
     "# read in file\n",
     "featureFilePath = \"mock_features_preprocessing.csv\"\n",
@@ -63,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,100 +88,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:409: UserWarning: A single label was found in 'y_true' and 'y_pred'. For the confusion matrix to have the correct shape, use the 'labels' parameter to pass all known labels.\n",
-      "  warnings.warn(\n",
-      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:2480: UserWarning: y_pred contains classes not in y_true\n",
-      "  warnings.warn(\"y_pred contains classes not in y_true\")\n",
-      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 due to no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:409: UserWarning: A single label was found in 'y_true' and 'y_pred'. For the confusion matrix to have the correct shape, use the 'labels' parameter to pass all known labels.\n",
-      "  warnings.warn(\n",
-      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py:540: FitFailedWarning: \n",
-      "2 fits failed out of a total of 5.\n",
-      "The score on these train-test partitions for these parameters will be set to nan.\n",
-      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
-      "\n",
-      "Below are more details about the failures:\n",
-      "--------------------------------------------------------------------------------\n",
-      "1 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"/Users/al/Desktop/Bioinformatik/1.Semester/Sequence Bioinformatics/Virushunter/Virushunter/code/classification/ElkanotoSVCClassifier.py\", line 35, in fit\n",
-      "    self.model.fit(X, y)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/pulearn/elkanoto.py\", line 73, in fit\n",
-      "    self.estimator.fit(X, y)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py\", line 1473, in wrapper\n",
-      "    return fit_method(estimator, *args, **kwargs)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 199, in fit\n",
-      "    y = self._validate_targets(y)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 742, in _validate_targets\n",
-      "    raise ValueError(\n",
-      "ValueError: The number of classes has to be greater than one; got 1 class\n",
-      "\n",
-      "--------------------------------------------------------------------------------\n",
-      "1 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"/Users/al/Desktop/Bioinformatik/1.Semester/Sequence Bioinformatics/Virushunter/Virushunter/code/classification/ElkanotoSVCClassifier.py\", line 35, in fit\n",
-      "    self.model.fit(X, y)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/pulearn/elkanoto.py\", line 76, in fit\n",
-      "    hold_out_predictions = self.estimator.predict_proba(X_p_hold_out)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 856, in predict_proba\n",
-      "    X = self._validate_for_predict(X)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 606, in _validate_for_predict\n",
-      "    X = self._validate_data(\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py\", line 633, in _validate_data\n",
-      "    out = check_array(X, input_name=\"X\", **check_params)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py\", line 1087, in check_array\n",
-      "    raise ValueError(\n",
-      "ValueError: Found array with 0 sample(s) (shape=(0, 1615)) while a minimum of 1 is required by SVC.\n",
-      "\n",
-      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:2480: UserWarning: y_pred contains classes not in y_true\n",
-      "  warnings.warn(\"y_pred contains classes not in y_true\")\n",
-      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 due to no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py:540: FitFailedWarning: \n",
-      "4 fits failed out of a total of 5.\n",
-      "The score on these train-test partitions for these parameters will be set to nan.\n",
-      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
-      "\n",
-      "Below are more details about the failures:\n",
-      "--------------------------------------------------------------------------------\n",
-      "4 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"/Users/al/Desktop/Bioinformatik/1.Semester/Sequence Bioinformatics/Virushunter/Virushunter/code/classification/ElkanotoSVCClassifier.py\", line 35, in fit\n",
-      "    self.model.fit(X, y)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/pulearn/elkanoto.py\", line 76, in fit\n",
-      "    hold_out_predictions = self.estimator.predict_proba(X_p_hold_out)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 856, in predict_proba\n",
-      "    X = self._validate_for_predict(X)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/svm/_base.py\", line 606, in _validate_for_predict\n",
-      "    X = self._validate_data(\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py\", line 633, in _validate_data\n",
-      "    out = check_array(X, input_name=\"X\", **check_params)\n",
-      "  File \"/Users/al/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py\", line 1087, in check_array\n",
-      "    raise ValueError(\n",
-      "ValueError: Found array with 0 sample(s) (shape=(0, 1615)) while a minimum of 1 is required by SVC.\n",
-      "\n",
-      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n"
+      "Shape of X: (45, 590)\n",
+      "Length of y: 45\n",
+      "[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0]\n",
+      "Shape of X: (45, 590)\n",
+      "Length of y: 45\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0]\n",
+      "Shape of X: (45, 590)\n",
+      "Length of y: 45\n",
+      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1]\n"
      ]
     }
    ],
    "source": [
     "# run k-fold cross validation for each host\n",
-    "from sklearn.model_selection import KFold, cross_validate\n",
+    "from sklearn.model_selection import StratifiedKFold, KFold, cross_validate\n",
     "import numpy as np\n",
     "\n",
     "scores = {}\n",
@@ -181,33 +120,43 @@
     "    # load the training data\n",
     "    X = X\n",
     "    y = getYForHost(host)\n",
+    "    print(\"Shape of X:\", X.shape)\n",
+    "    print(\"Length of y:\", len(y))\n",
+    "    print(y)\n",
+    "\n",
     "\n",
     "    # run k-fold cross validation\n",
-    "    cv = KFold(n_splits=5, shuffle=True)\n",
+    "    cv = KFold(n_splits=2, shuffle=True)\n",
+    "    #cv = StratifiedKFold(n_splits=2, shuffle=True, random_state=42)\n",
     "    scores[host] = cross_validate(classifiers[host], X, y, cv=cv, scoring=['balanced_accuracy', 'recall', 'precision'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'hosttaxID1': {'fit_time': array([0.00468397, 0.00295091, 0.00166297, 0.00072789, 0.00107598]),\n",
-       "  'score_time': array([0.00875211, 0.00752616, 0.00493312, 0.        , 0.        ]),\n",
-       "  'test_balanced_accuracy': array([ 1.,  0.,  1., nan, nan]),\n",
-       "  'test_recall': array([ 1.,  0.,  1., nan, nan]),\n",
-       "  'test_precision': array([ 1.,  0.,  1., nan, nan])},\n",
-       " 'hosttaxID2': {'fit_time': array([0.00170922, 0.00112796, 0.0010488 , 0.0011251 , 0.0008769 ]),\n",
-       "  'score_time': array([0.        , 0.        , 0.00421023, 0.        , 0.        ]),\n",
-       "  'test_balanced_accuracy': array([nan, nan,  0., nan, nan]),\n",
-       "  'test_recall': array([nan, nan,  0., nan, nan]),\n",
-       "  'test_precision': array([nan, nan,  0., nan, nan])}}"
+       "{'hosttaxID1': {'fit_time': array([0.00525308, 0.00247407]),\n",
+       "  'score_time': array([0.00993395, 0.00561476]),\n",
+       "  'test_balanced_accuracy': array([1.        , 0.96666667]),\n",
+       "  'test_recall': array([1., 1.]),\n",
+       "  'test_precision': array([1.   , 0.875])},\n",
+       " 'hosttaxID2': {'fit_time': array([0.00224781, 0.00181127]),\n",
+       "  'score_time': array([0.004673  , 0.00483799]),\n",
+       "  'test_balanced_accuracy': array([1., 1.]),\n",
+       "  'test_recall': array([1., 1.]),\n",
+       "  'test_precision': array([1., 1.])},\n",
+       " 'hosttaxID3': {'fit_time': array([0.00176883, 0.00138807]),\n",
+       "  'score_time': array([0.003901  , 0.00372815]),\n",
+       "  'test_balanced_accuracy': array([1.        , 0.94444444]),\n",
+       "  'test_recall': array([1.        , 0.88888889]),\n",
+       "  'test_precision': array([1., 1.])}}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +169,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "virushunter",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
