--- a/code/trainingProcess.ipynb
+++ b/code/trainingProcess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Global parameters for calculating the data for the csv (and their paths) and for the chosen features\n",
-    "doPreperation = False\n",
+    "doPreperation = True\n",
     "doPreprocessing = False\n",
     "featureFilePath = \"genomeFeatures.csv\"\n",
     "genomeFilePath = \"genomes.csv\"\n",
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
