--- a/code/trainingProcess.ipynb
+++ b/code/trainingProcess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Global parameters for calculating the data for the csv (and their paths) and for the chosen features\n",
-    "doPreperation = True\n",
+    "doPreperation = False\n",
     "doPreprocessing = False\n",
     "featureFilePath = \"genomeFeatures.csv\"\n",
     "genomeFilePath = \"genomes.csv\"\n",
-    "chosenFeatures = { \"kmer\": [2, 3, 7], \"codon_translation\": [], \"dicodon_translation\" : []}"
+    "chosenFeatures = { \"kmer\": [2, 3, 7], \"codon_translation\": [], \"dicodon_translation\" : [], \"sequence_length\" : []}"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,32 +118,34 @@
     "    y = getYForHost(host)\n",
     "\n",
     "    # run k-fold cross validation\n",
-    "    cv = KFold(n_splits=3, shuffle=True)\n",
+    "    cv = KFold(n_splits=4, shuffle=True)\n",
     "    #cv = StratifiedKFold(n_splits=2, shuffle=True, random_state=42)\n",
-    "    scores[host] = cross_validate(classifiers[host], X, y, cv=cv, scoring=['balanced_accuracy', 'recall', 'precision'])"
+    "    scores[host] = cross_validate(classifiers[host], X, y, cv=cv, scoring=['balanced_accuracy', 'recall', 'precision', 'f1'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{10090: {'fit_time': array([0.84717178, 0.59498596, 0.77458286]),\n",
-       "  'score_time': array([0.22276711, 0.24308205, 0.13884521]),\n",
-       "  'test_balanced_accuracy': array([0.5, 0.5, 0.5]),\n",
-       "  'test_recall': array([1., 1., 1.]),\n",
-       "  'test_precision': array([0.81318681, 0.91111111, 0.86666667])},\n",
-       " 9534: {'fit_time': array([0.68211389, 0.67319202, 0.47704697]),\n",
-       "  'score_time': array([0.21298718, 0.18862104, 0.15947104]),\n",
-       "  'test_balanced_accuracy': array([0.5, 0.5, 0.5]),\n",
-       "  'test_recall': array([1., 1., 1.]),\n",
-       "  'test_precision': array([0.15384615, 0.12222222, 0.13333333])}}"
+       "{10090: {'fit_time': array([0.89850092, 0.83758998, 0.55769205, 0.47517991]),\n",
+       "  'score_time': array([0.16909909, 0.13218093, 0.06457686, 0.05828786]),\n",
+       "  'test_balanced_accuracy': array([0.5, 0.5, 0.5, 0.5]),\n",
+       "  'test_recall': array([1., 1., 1., 1.]),\n",
+       "  'test_precision': array([0.86764706, 0.85294118, 0.89705882, 0.8358209 ]),\n",
+       "  'test_f1': array([0.92913386, 0.92063492, 0.94573643, 0.91056911])},\n",
+       " 9534: {'fit_time': array([0.36164403, 0.46575809, 0.45738912, 0.41481328]),\n",
+       "  'score_time': array([0.07598686, 0.09598398, 0.07301188, 0.05946398]),\n",
+       "  'test_balanced_accuracy': array([0.51754386, 0.5       , 0.5       , 0.5       ]),\n",
+       "  'test_recall': array([1., 1., 1., 1.]),\n",
+       "  'test_precision': array([0.16666667, 0.16176471, 0.11764706, 0.10447761]),\n",
+       "  'test_f1': array([0.28571429, 0.27848101, 0.21052632, 0.18918919])}}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
