--- a/code/trainingProcess.ipynb
+++ b/code/trainingProcess.ipynb
@@ -28,9 +28,9 @@
     "# Global parameters for calculating the data for the csv (and their paths) and for the chosen features\n",
     "doPreperation = False\n",
     "doPreprocessing = False\n",
-    "featureFilePath = \"genomeFeatures.csv\"\n",
+    "featureFilePath = \"genomesWithFeatures.csv\"\n",
     "genomeFilePath = \"genomes.csv\"\n",
-    "chosenFeatures = { \"kmer\": [2, 3, 7], \"codon_translation\": [], \"dicodon_translation\" : [], \"sequence_length\" : []}"
+    "chosenFeatures = { \"kmer\": [5, 8], \"codon_translation\": [], \"dicodon_translation\" : [], \"sequence_length\" : []}"
    ]
   },
   {
@@ -55,9 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature matrix successfully saved to genomesWithFeatures.csv\n",
+      "Phase2\n"
+     ]
+    }
+   ],
    "source": [
     "# Preprocessing of Training Data\n",
     "if doPreprocessing:\n",
@@ -67,16 +76,29 @@
     "\n",
     "featureData = pd.read_csv(featureFilePath)\n",
     "\n",
-    "# Convert the flat feature list into right format for classifier TODO: Do it better (best case before csv)\n",
+    "# Convert the flat feature list into right format for classifier TODO: Do it better (best case before csv) for efficency\n",
     "featureData['FeaturesFlat'] = featureData['FeaturesFlat'].apply(ast.literal_eval)\n",
+    "print(\"Phase2\")\n",
     "featureData['FeaturesFlat'] = featureData['FeaturesFlat'].apply(lambda x: [float(i) for i in x])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'featureData' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m     featuresPerHost[host] \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m     14\u001b[0m \u001b[38;5;66;03m# Extract features of virus sequences for each host in seperate list and convert them to a np array\u001b[39;00m\n\u001b[0;32m---> 15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _, row \u001b[38;5;129;01min\u001b[39;00m \u001b[43mfeatureData\u001b[49m\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[1;32m     16\u001b[0m     host \u001b[38;5;241m=\u001b[39m row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHostTaxID\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     17\u001b[0m     features \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFeaturesFlat\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'featureData' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Training of the PU-Classifier\n",
     "\n",
@@ -125,27 +147,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{10090: {'fit_time': array([0.89850092, 0.83758998, 0.55769205, 0.47517991]),\n",
-       "  'score_time': array([0.16909909, 0.13218093, 0.06457686, 0.05828786]),\n",
+       "{10090: {'fit_time': array([2.15569925, 2.35063291, 1.6938839 , 1.19818091]),\n",
+       "  'score_time': array([0.19839478, 0.28084207, 0.21902609, 0.19310904]),\n",
        "  'test_balanced_accuracy': array([0.5, 0.5, 0.5, 0.5]),\n",
        "  'test_recall': array([1., 1., 1., 1.]),\n",
-       "  'test_precision': array([0.86764706, 0.85294118, 0.89705882, 0.8358209 ]),\n",
-       "  'test_f1': array([0.92913386, 0.92063492, 0.94573643, 0.91056911])},\n",
-       " 9534: {'fit_time': array([0.36164403, 0.46575809, 0.45738912, 0.41481328]),\n",
-       "  'score_time': array([0.07598686, 0.09598398, 0.07301188, 0.05946398]),\n",
-       "  'test_balanced_accuracy': array([0.51754386, 0.5       , 0.5       , 0.5       ]),\n",
+       "  'test_precision': array([0.82352941, 0.95588235, 0.85294118, 0.82089552]),\n",
+       "  'test_f1': array([0.90322581, 0.97744361, 0.92063492, 0.90163934])},\n",
+       " 9534: {'fit_time': array([1.057585  , 1.66847277, 1.07855105, 1.11113286]),\n",
+       "  'score_time': array([0.21942401, 0.29591918, 0.20665598, 0.21692204]),\n",
+       "  'test_balanced_accuracy': array([0.5, 0.5, 0.5, 0.5]),\n",
        "  'test_recall': array([1., 1., 1., 1.]),\n",
-       "  'test_precision': array([0.16666667, 0.16176471, 0.11764706, 0.10447761]),\n",
-       "  'test_f1': array([0.28571429, 0.27848101, 0.21052632, 0.18918919])}}"
+       "  'test_precision': array([0.13235294, 0.05882353, 0.20588235, 0.14925373]),\n",
+       "  'test_f1': array([0.23376623, 0.11111111, 0.34146341, 0.25974026])}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
