--- a/code/trainingProcess.ipynb
+++ b/code/trainingProcess.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
     "\n",
     "# plot heatmap\n",
     "fig, ax = plt.subplots()\n",
-    "cax = ax.matshow(confusionMatrix, )\n",
+    "cax = ax.matshow(confusionMatrix)\n",
     "fig.colorbar(cax)\n",
     "plt.xticks(range(len(allHosts)), allHosts, rotation=90)\n",
     "plt.yticks(range(len(allHosts)), allHosts)\n",
